Keep base query tests compatible with Java 8